Project Invitations UI development
- Fixing naming conventions for tabbed navigation (changed 'Update Details' to 'Invitation Details'

--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -7,10 +7,10 @@
 			<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
 			<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
       </button>
-			<button type="button" class="btn btn-default btn-sm" ng-click="save(mainForm.$valid)"><span
-        class="glyphicon glyphicon-save"></span><span>Save</span></button>
-			<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="mainForm.$invalid" ng-click="send(mainForm.$valid)"><span
-        class="glyphicon glyphicon-send"></span><span>Send</span></button>
+			<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">
+				<span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+			<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="mainForm.$invalid" ng-click="send(mainForm.$valid)">
+				<span class="glyphicon glyphicon-send"></span><span>Send</span></button>
 		</div>
 	</div>
 
@@ -19,7 +19,7 @@
 		<ul class="nav nav-tabs" ng-init="form.curTab = 'Update Details'">
 			<li role="presentation" ng-class="{'active':form.curTab === 'Update Details'}" class="form-group" x-show-errors>
 				<a ng-click="form.curTab = 'Update Details'" title="Edit Project Update Details" name="detailsForm">
-					<span class="glyphicon glyphicon-exclamation-sign"></span>Update Details</a>
+					<span class="glyphicon glyphicon-exclamation-sign"></span>Invitation Details</a>
 			</li>
 			<li role="presentation" ng-class="{'active':form.curTab === 'recipients'}" class="form-group" x-show-errors>
 				<a ng-click="form.curTab = 'recipients'" title="Edit Project Recipients" name="recipientsForm">
@@ -31,8 +31,7 @@
 
 			<div class="panel panel-default">
 				<div class="panel-body">
-
-					<div class="form-group" x-show-errors>
+					<div class="form-group no-margin" x-show-errors>
 						<label class="control-label">Name<em class="required">(Required)</em></label>
 						<input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
 					</div>
@@ -96,12 +95,12 @@
 		<div class="form-footer">
 			<div class="pull-right">
 				<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
-				<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
-        </button>
-				<button type="button" class="btn btn-default btn-sm" ng-click="save(mainForm.$valid)"><span
-          class="glyphicon glyphicon-save"></span><span>Save</span></button>
-				<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="mainForm.$invalid" ng-click="send(mainForm.$valid)"><span
-          class="glyphicon glyphicon-send"></span><span>Send</span></button>
+				<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)">
+					<span class="glyphicon glyphicon-trash"></span><span>Delete</span></button>
+				<button type="button" class="btn btn-primary btn-sm" ng-click="save(mainForm.$valid)">
+					<span class="glyphicon glyphicon-save"></span><span>Save</span></button>
+				<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="mainForm.$invalid" ng-click="send(mainForm.$valid)">
+					<span class="glyphicon glyphicon-send"></span><span>Send</span></button>
 			</div>
 		</div>
 
