--- a/modules/invitations/client/views/invitation-view.html
+++ b/modules/invitations/client/views/invitation-view.html
@@ -16,7 +16,7 @@
     <ul class="nav nav-tabs" ng-init="form.curTab = 'Update Details'">
       <li role="presentation" ng-class="{'active':form.curTab === 'Update Details'}" class="form-group">
         <a ng-click="form.curTab = 'Update Details'" title="Edit Project Update Details" name="detailsForm">
-          <span class="glyphicon glyphicon-exclamation-sign"></span>Update Details</a>
+          <span class="glyphicon glyphicon-exclamation-sign"></span>Invitation Details</a>
       </li>
       <li role="presentation" ng-class="{'active':form.curTab === 'recipients'}" class="form-group">
         <a ng-click="form.curTab = 'recipients'" title="Edit Project Recipients" name="recipientsForm">
