Project Invitations UI development
- Fixing naming conventions for input labels (changed 'Update Name' to 'Invitation Name'

--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -32,7 +32,7 @@
 			<div class="panel panel-default">
 				<div class="panel-body">
 					<div class="form-group no-margin" x-show-errors>
-						<label class="control-label">Name<em class="required">(Required)</em></label>
+						<label class="control-label">Invitation Name<em class="required">(Required)</em></label>
 						<input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
 					</div>
 				</div>
@@ -42,8 +42,7 @@
 				<div class="panel-heading flex-row">
 					<h2>Configure Email</h2>
 					<div class="actions">
-						<button type="button" class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="emailTemplate">Use Existing Template
-            </button>
+						<button type="button" class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="emailTemplate">Use Existing Template</button>
 					</div>
 				</div>
 				<div class="panel-body">
