--- a/modules/invitations/client/views/invitation-view.html
+++ b/modules/invitations/client/views/invitation-view.html
@@ -27,7 +27,7 @@
     <div class="tab-pane active" ng-show="form.curTab === 'Update Details'" ng-form="detailsForm">
 
       <div class="form-group" x-show-errors>
-        <label class="control-label">Update Name</label>
+        <label class="control-label">Invitation Name</label>
         <input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required disabled />
       </div>
 
