--- a/modules/communications/client/views/communication-view.html
+++ b/modules/communications/client/views/communication-view.html
@@ -25,7 +25,7 @@
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<div class="detail-row">
-					<label class="control-label">Project Update Name</label>
+					<label class="control-label">Update Name</label>
 					<span class="value">{{s.communication.name}}</span>
 				</div>
 				<div class="row">
@@ -43,7 +43,7 @@
 
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h2>Project Update Email</h2>
+				<h2>Email</h2>
 			</div>
 			<div class="panel-body detail-panel">
 				<div class="detail-row">
