Adding notes to IR actions.

--- a/modules/project-irs/client/views/ir-add-action.html
+++ b/modules/project-irs/client/views/ir-add-action.html
@@ -48,6 +48,10 @@
 				</ul>
 			</div>
 		</div>
+		<div class="form-group">
+			<label class="control-label" for="type">Notes<em class="required">(Required)</em></label>
+					<input class="form-control" title="Notes" id="actionnotes" name="actionnotes" ng-model="selected.notes" required/>
+		</div>
 	</div>
 	<div class="modal-footer">
 		<button type="button" class="btn btn-default" ng-click="a.cancel()">Cancel</button>
