Enforcements UI Development
- Adding notes and the repeatable markup for enforcement conditions

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -60,7 +60,7 @@ $modal-footer-bg: 			#FFF;
 
 /* Panel */
 $panel-border-color: 		#DDD;
-$panel-heading-bg: 			#FFF;
+$panel-heading-bg: 			#F7F8FA;
 $panel-heading-color: 		#494949;
 $panel-footer-bg: 			#FFF;
 
@@ -4283,6 +4283,11 @@ section {
 		.label {
 			min-width: 7rem;
 		}
+	}
+
+	.enforcement-notes {
+		margin-top: 0.5rem;
+		display: block;
 	}
 }
 
