--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3483,13 +3483,14 @@ section {
 	}
 
 	.tag {
-		padding: 0.2rem;
+		padding-right: 0.2rem;
 		background: $success-bg;
 		border-radius: 4px;
 		box-shadow: 0 1px 1px rgba(0, 0, 0, .075);
 
 		.tag-name {
-			padding-left: 1rem;
+			display: inline-block;
+			padding: 0.45rem 1rem;
 		}
 
 		.btn {
