--- a/modules/project-irs/client/views/ir-add-action.html
+++ b/modules/project-irs/client/views/ir-add-action.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="form-group">
 			<label class="control-label" for="type">Enforcement Conditions<em class="required">(Required)</em></label>
-			<div class="tag-list-container form-control clearfix">
+			<div class="tag-list-container form-control">
 				<ul class="tag-list">
 					<li class="tag" ng-repeat="o in selected.condition.concat(selected.conditionArtifacts)">
 						<span class="tag-name">{{o.name}}</span>
@@ -49,17 +49,19 @@
 		</div>
 		<div class="form-group">
 			<label class="control-label" for="type">Order<em class="required">(Required)</em></label>
+			<div class="tag-list-container form-control">
 				<ul class="tag-list">
-					<li class="tag" ng-repeat="o in selected.condition.concat(selected.conditionArtifacts)">
-						<span class="tag-name">{{o.name}}</span>
-					</li>
-					<li class="add-tag">
+					<li class="tag" ng-if="selected.orderArtifact">
+						<span class="tag-name">{{selected.orderArtifact.name}}</span>
+						<button class="btn" ng-click="removeEnforcementActionCondition(o, selected)"><span aria-hidden="true">×</span></button>
+					</li><li class="add-tag">
 						<button class="btn btn-default btn-sm" type="button"
 		                    x-artifact-list-chooser
 		                    x-project="project"
 		                    x-current="selected.orderArtifact"><span class="glyphicon glyphicon-plus"></span></button>
 	            	</li>
 	            </ul>
+			</div>
 		</div>
 		<div class="form-group">
 			<label class="control-label" for="type">Notes<em class="required">(Required)</em></label>
