--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -46,7 +46,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 form-group">
-						<label class="control-label">Cerfificate Requirements Inspected</label>
+						<label class="control-label">Certificate Requirements Inspected</label>
 						<div class="tag-list-container form-control clearfix">
 							<ul class="tag-list">
 								<li class="tag" ng-repeat="o in ir.conditionArtifacts">
