--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -44,42 +44,6 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12 form-group">
-						<label class="control-label">Certificate Requirements Inspected</label>
-						<div class="tag-list-container form-control clearfix">
-							<ul class="tag-list">
-								<li class="tag" ng-repeat="o in ir.conditionArtifacts">
-									<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
-									<button class="btn" ng-click="removeCondition(o)"><span aria-hidden="true">×</span></button>
-								</li><li class="add-tag">
-									<button class="add-btn btn btn-sm"
-										ng-if="project.userCan.createInspectionReport"
-										ng-click="openAddTopic()" type="button" title="Add Associated Content"><span class="glyphicon glyphicon-plus"></span>
-									</button>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 form-group">
-						<label class="control-label">Conditions</label>
-						<div class="tag-list-container form-control clearfix">
-							<ul class="tag-list">
-								<li class="tag" ng-repeat="o in ir.conditions">
-									<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
-									<button class="btn" ng-click="removeCondition(o)"><span aria-hidden="true">×</span></button>
-								</li><li class="add-tag">
-									<button class="add-btn btn btn-sm"
-										ng-if="project.userCan.createInspectionReport"
-										ng-click="addIRCondition()" type="button" title="Add Conditions"><span class="glyphicon glyphicon-plus"></span>
-									</button>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
 				<div class="form-group no-margin">
 					<label class="control-label">Inspection Record</label>
 					<ul class="anchor-list">
@@ -92,6 +56,49 @@
 			</div>
 		</div><!--/INSPECTION DETAILS -->
 	
+		<div class="panel panel-default">
+			<div class="panel-heading"><h2>Certificate Requirements Inspected</h2></div>
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-md-12 form-group">
+						<label class="control-label">Content ({{ir.conditionArtifacts.length}})</label>
+						<div class="tag-list-container form-control clearfix">
+							<ul class="tag-list">
+								<li class="tag" ng-repeat="o in ir.conditionArtifacts">
+									<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
+									<button class="btn" ng-click="removeCondition(o)"><span aria-hidden="true">×</span></button>
+								</li><li class="add-tag">
+									<button class="add-btn btn btn-sm"
+										ng-if="project.userCan.createInspectionReport"
+										ng-click="openAddTopic()" type="button" title="Add Associated Content">
+										<span class="glyphicon glyphicon-plus"></span><span>Add Content</span>
+									</button>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12 form-group no-margin">
+						<label class="control-label">Conditions ({{ir.conditions.length}})</label>
+						<div class="tag-list-container form-control clearfix">
+							<ul class="tag-list">
+								<li class="tag" ng-repeat="o in ir.conditions">
+									<span class="tag-name" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}</span>
+									<button class="btn" ng-click="removeCondition(o)"><span aria-hidden="true">×</span></button>
+								</li><li class="add-tag">
+									<button class="add-btn btn btn-sm"
+										ng-if="project.userCan.createInspectionReport"
+										ng-click="addIRCondition()" type="button" title="Add Conditions">
+										<span class="glyphicon glyphicon-plus"></span><span>Add Conditions</span>
+									</button>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<div class="panel panel-default">
 			<div class="panel-heading flex-row">
@@ -111,12 +118,20 @@
 						data-title="'Action'" 
 						sortable="'o.action'">
 						<strong class="enforcement-name">{{o.action}}</strong>
+						
+						<span class="enforcement-notes" ng-if="o.notes">{{o.notes}}</span>
+					</td>
+					<td data-title="'Enforcement Conditions'">
 						<ul class="anchor-list">
 							<li ng-repeat="cell in o.condition.concat(o.conditionArtifacts)">
 								<a href="#">{{cell.name}}</a>
 							</li>
 						</ul>
-						<span class="enforcement-notes" ng-if="o.notes">{{o.notes}}</span>
+					</td>
+					<td data-title="'Order'">
+						<ul class="anchor-list">
+							<a href="#">{{o.orderArtifact.name}}</a>
+						</ul>
 					</td>
 					<td class="status-col"
 				 		header-class="'status-col'"
