Resolving order Artifacts for edit/detail states.

--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -81,7 +81,7 @@
 				</td>
 				<td data-title="'Order'">
 					<ul class="anchor-list">
-						<a href="#">{{o.orderArtifact}}</a>
+						<a href="#">{{o.orderArtifact.name}}</a>
 					</ul>
 				</td>
 				<td class="status-col"
