Add Update button for artifacts which are already published - enables a quick way to skip artifact approval process.

--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -18,6 +18,10 @@
 				</li>
 			</ul>
 		</div>
+		<button class="btn btn-success btn-sm"
+				title="Update (Re-publish)"
+				ng-if="artifact.isPublished"
+				ng-click="update()">Update</button>
 		<button class="btn btn-success btn-sm" title="Submit for {{buttons.next}}" ng-click="submit()">Submit for {{buttons.next}}</button>
 	</div>
 </div>
