--- a/modules/project-irs/client/views/ir-view.html
+++ b/modules/project-irs/client/views/ir-view.html
@@ -32,11 +32,9 @@
 			<div class="row">
 				<div class="col-sm-12 detail-row" ng-if="ir.conditionArtifacts.length > 0">
 					<label>Certificate Requirements Inspected</label>
-					<ul class="anchor-list">
-						<li ng-repeat="o in ir.conditionArtifacts" ui-sref="p.artifact.view({artifactId:o._id})">
-							<a class="title">{{o.name}}</a>
-						</li>
-					</ul>
+					<div class="anchor-list">
+						<a ng-repeat="o in ir.conditionArtifacts" ui-sref="p.artifact.view({artifactId:o._id})">{{o.name}}{{$last ? '' : ', '}}</a>
+					</div>
 				</div>
 			</div>
 			<div class="row">
@@ -67,17 +65,16 @@
 		<table ng-table="tableParams" class="enforcement-table table table-hover">
 			<tr class="clickable" ui-sref="p.ir.detail({irId:o._id})" ng-repeat="o in ir.enforcementActions">
 				<td class="enforcement-col"
+					header-class="'enforcement-col'"
 					data-title="'Action'" 
 					sortable="'o.action'">
 					<strong class="enforcement-name">{{o.action}}</strong>
 					<span class="enforcement-notes" ng-if="o.notes">{{o.notes}}</span>
 				</td>
 				<td data-title="'Enforcement Conditions'">
-					<ul class="anchor-list">
-						<li ng-repeat="cell in o.condition.concat(o.conditionArtifacts)">
-							<a href="#">{{cell.name}}</a>
-						</li>
-					</ul>
+					<div class="anchor-list">
+						<a ng-repeat="cell in o.condition.concat(o.conditionArtifacts)">{{cell.name}}{{$last ? '' : ', '}}</a>
+					</div>
 				</td>
 				<td data-title="'Order'">
 					<ul class="anchor-list">
@@ -98,7 +95,7 @@
 					data-title="'Date Issued'"
 					sortable="'date'">{{o.date | date:'MMM dd, yyyy'}}</td>
 				<tr ng-show="ir.enforcementActions.length == 0">
-					<td colspan="3">No Enforcement Actions found</td>
+					<td colspan="5">No Enforcement Actions found</td>
 				</tr>
 			</tr>
 		</table>
