--- a/modules/project-irs/client/views/ir-add-action.html
+++ b/modules/project-irs/client/views/ir-add-action.html
@@ -48,20 +48,24 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<label class="control-label" for="type">Order<em class="required">(Required)</em></label>
-			<div class="tag-list-container form-control">
-				<ul class="tag-list">
-					<li class="tag" ng-if="selected.orderArtifact">
-						<span class="tag-name">{{selected.orderArtifact.name}}</span>
-						<button class="btn" ng-click="removeEnforcementActionCondition(o, selected)"><span aria-hidden="true">×</span></button>
-					</li><li class="add-tag">
-						<button class="btn btn-default btn-sm" type="button"
-		                    x-artifact-list-chooser
-		                    x-project="project"
-		                    x-current="selected.orderArtifact"><span class="glyphicon glyphicon-plus"></span></button>
-	            	</li>
-	            </ul>
-			</div>
+			<label class="control-label" for="type">Enforcement Order<em class="required">(Required)</em></label>
+			<ul class="list-group">
+				<li class="list-group-item flex-row" ng-if="selected.orderArtifact">
+					<span class="title">{{selected.orderArtifact.name}}</span>
+					<span class="actions">
+						<button class="btn btn-sm btn-default"
+							x-artifact-list-chooser
+							x-project="project"
+							x-current="selected.orderArtifact">
+							<span class="glyphicon glyphicon-pencil"></span></button>
+					</span>
+				</li>
+				<button class="btn btn-default btn-sm" type="button"
+					ng-if="!selected.orderArtifact"
+					x-artifact-list-chooser
+					x-project="project"
+					x-current="selected.orderArtifact">Select Order</button>
+			</ul>
 		</div>
 		<div class="form-group">
 			<label class="control-label" for="type">Notes<em class="required">(Required)</em></label>
