General UI Clean-up
- Fixed formatting issues for user-invitation-chooser.html, communication-edit.html
- Standardized the tag-list component on the vc-edit.html to fall in line with other views that use this functionality

--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -45,10 +45,7 @@
 									<button class="btn" type="button" ng-click="removeArtifact(art._id)"><span aria-hidden="true">×</span></button>
 								</li>
 								<li class="add-tag">
-									<button class="btn btn-default btn-sm" type="button"
-										x-artifact-list-chooser
-										x-project="project"
-										x-current="artifacts"><span class="glyphicon glyphicon-plus"></span></button>
+									<button class="btn btn-default btn-sm" type="button" x-artifact-list-chooser x-project="project" x-current="artifacts"><span class="glyphicon glyphicon-plus"></span></button>
 								</li>
 							</ul>
 						</div>
@@ -82,14 +79,20 @@
 
 		<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
 			<div class='button-bar'>
-				<button type="button" x-add-new-recipient x-project="project" x-current="adhocRecipient" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add New</span>
-        </button>
-				<button type="button" x-user-search-chooser x-project="project" x-destination="existingRecipients" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Existing</span>
-        </button>
-        <button class="btn btn-default btn-sm"
-                ng-if="authentication.user"
-                ng-click="s.downloadAddressList()"><span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
-      </div>
+				<button type="button" 
+					x-add-new-recipient x-project="project" 
+					x-current="adhocRecipient" class="btn btn-default btn-sm">
+					<span class="glyphicon glyphicon-plus"></span><span>Add New</span></button>
+				<button type="button"
+					x-user-search-chooser 
+					x-project="project" 
+					x-destination="existingRecipients" class="btn btn-default btn-sm">
+					<span class="glyphicon glyphicon-plus"></span><span>Add Existing</span></button>
+				<button class="btn btn-default btn-sm"
+					ng-if="authentication.user"
+					ng-click="s.downloadAddressList()">
+					<span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
+			</div>
 			<div class="panel panel-default">
 				<table ng-table="tableParams" show-filter="true" class="communications-table table table-hover vc-table">
 					<tr ng-repeat="o in $data">
