--- a/modules/users/client/views/user-invitation-chooser.html
+++ b/modules/users/client/views/user-invitation-chooser.html
@@ -1,7 +1,5 @@
 <div class="modal-header">
-	<button type="button" class="btn btn-default close" ng-click="s.cancel()">
-    <span aria-hidden="true">&times;</span>
-  </button>
+	<button type="button" class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">&times;</span></button>
 	<h3 class="modal-title">Add Existing Recipient(s)</h3>
 </div>
 
@@ -14,18 +12,24 @@
 	<table class="user-table table table-hover table-scroll" ng-table="tableParams" show-filter="false">
 		<tr ng-repeat="o in $data">
 			<td class="checkbox-col" header-class="'checkbox-col'" header="'ng-table/headers/checkbox.html'">
-				<input type="checkbox" ng-model="checkboxes.items[o._id]" />
+				<input type="checkbox" ng-model="checkboxes.items[o._id]"/></td>
+			<td class="name-col" header-class="'name-col'"
+				data-title="'Name'"
+				filter="{'displayName':'text'}"
+				sortable="'displayName'">{{o.displayName}}</a></td>
+			<td class="name-col" header-class="'name-col'"
+				data-title="'Email'" 
+				filter="{'email':'text'}" 
+				sortable="'email'">{{o.email}}</a>
 			</td>
-			<td class="name-col" header-class="'name-col'" data-title="'Name'" filter="{'displayName':'text'}" sortable="'displayName'">{{o.displayName}}</a>
-			</td>
-			<td class="name-col" header-class="'name-col'" data-title="'Email'" filter="{'email':'text'}" sortable="'email'">{{o.email}}</a>
-			</td>
-			<td class="name-col" header-class="'name-col'" data-title="'Organization'" filter="{'orgName':'text'}" sortable="'orgName'">{{o.orgName}}</a>
+			<td class="name-col" header-class="'name-col'"
+				data-title="'Organization'" 
+				filter="{'orgName':'text'}" 
+				sortable="'orgName'">{{o.orgName}}</a>
 			</td>
 		</tr>
-
 		<tr class="no-records" ng-if="!$data || $data.length === 0">
-			<td colspan="2">
+			<td colspan="4">
 				No records found.
 			</td>
 		</tr>
