--- a/modules/users/client/views/user-invitation-chooser.html
+++ b/modules/users/client/views/user-invitation-chooser.html
@@ -11,22 +11,23 @@
 	<!-- Table must be filterable -->
 	<table class="user-table table table-hover table-scroll" ng-table="tableParams" show-filter="false">
 		<tr ng-repeat="o in $data">
-			<td class="checkbox-col" header-class="'checkbox-col'" header="'ng-table/headers/checkbox.html'">
-				<input type="checkbox" ng-model="checkboxes.items[o._id]"/></td>
-			<td class="name-col" header-class="'name-col'"
-				data-title="'Name'"
-				filter="{'displayName':'text'}"
-				sortable="'displayName'">{{o.displayName}}</a></td>
-			<td class="name-col" header-class="'name-col'"
-				data-title="'Email'" 
-				filter="{'email':'text'}" 
-				sortable="'email'">{{o.email}}</a>
-			</td>
-			<td class="name-col" header-class="'name-col'"
-				data-title="'Organization'" 
-				filter="{'orgName':'text'}" 
-				sortable="'orgName'">{{o.orgName}}</a>
-			</td>
+      <td class="checkbox-col" header-class="'checkbox-col'" header="'ng-table/headers/checkbox.html'">
+        <input type="checkbox" ng-model="checkboxes.items[o._id]"/></td>
+      <td class="name-col" header-class="'name-col'"
+          data-title="'Name'"
+          filter="{'displayName':'text'}"
+          sortable="'displayName'">{{o.displayName}}</td>
+      <td class="name-col" header-class="'name-col'"
+          data-title="'Email'"
+          filter="{'email':'text'}"
+          sortable="'email'">{{o.email}}
+      </td>
+      <td class="name-col" header-class="'name-col'"
+          data-title="'Organization'"
+          filter="{'orgName':'text'}"
+          sortable="'orgName'">{{o.orgName}}
+      </td>
+    </tr>
 		</tr>
 		<tr class="no-records" ng-if="!$data || $data.length === 0">
 			<td colspan="4">
