--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -28,41 +28,31 @@
 		</ul>
 
 		<div class="tab-pane active" ng-show="form.curTab === 'Update Details'" ng-form="projectUpdateDetailsForm">
-
 			<div class="panel panel-default">
 				<div class="panel-body">
 					<div class="form-group" x-show-errors>
 						<label class="control-label">Update Name<em class="required">(Required)</em></label>
 						<input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
 					</div>
-
-					<div class="form-group no-margin">
+					<div class="form-group">
 						<label class="control-label">Related Content ({{artifacts.length}})</label>
 						<div class="tag-list-container form-control clearfix">
 							<ul class="tag-list">
 								<li class="tag" ng-repeat="art in artifacts">
 									<span class="tag-name">{{art.name}}</span>
 									<button class="btn" type="button" ng-click="removeArtifact(art._id)"><span aria-hidden="true">×</span></button>
-								</li>
-								<li class="add-tag">
+								</li><li class="add-tag">
 									<button class="btn btn-default btn-sm" type="button" x-artifact-list-chooser x-project="project" x-current="artifacts"><span class="glyphicon glyphicon-plus"></span></button>
 								</li>
 							</ul>
 						</div>
 					</div>
-
-				</div>
-			</div>
-
-			<div class="panel panel-default">
-				<div class="panel-heading flex-row">
-					<h2>Configure Email</h2>
-					<div class="actions">
-						<button type="button" class="btn btn-default btn-sm" x-email-template-chooser x-project="project" x-current="emailTemplate">Use Existing Template
-            </button>
+					<div class="form-group">
+						<button type="button" class="btn btn-default btn-sm"
+							x-email-template-chooser
+							x-project="project" 
+							x-current="emailTemplate">Use Existing Template</button>
 					</div>
-				</div>
-				<div class="panel-body">
 					<div class="form-group" x-show-errors>
 						<label class="control-label">Subject<em class="required">(Required)</em></label>
 						<input class="form-control" ng-model="s.communication.templateSubject" id="subject" name="subject" title="Subject" required></input>
@@ -70,12 +60,11 @@
 					<div class="form-group no-margin" x-show-errors>
 						<label class="control-label">Message<em class="required">(Required)</em></label>
 						<textarea ui-tinymce="tinymceOptions" type="text" ng-model="s.communication.templateContent" id="message" name="message"
-							title="Message" required ng-blur="activeItem = false">
-                    </textarea>
+							title="Message" required ng-blur="activeItem = false"></textarea>
 					</div>
-				</div>
-			</div>
-		</div>
+				</div><!--/panel-body-->
+			</div><!--/panel-->
+		</div><!--/tab-pane-->
 
 		<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
 			<div class='button-bar'>
