--- a/modules/invitations/client/views/invitation-view.html
+++ b/modules/invitations/client/views/invitation-view.html
@@ -1,5 +1,5 @@
 <div class="view-title-container flex-row">
-	<h1>Project Invitation &nbsp;&rsaquo;&nbsp; {{s.communication.name}}</h1>
+	<h1>Invitations &nbsp;&rsaquo;&nbsp; {{s.communication.name}}</h1>
 	<div class="actions">
 		<button class="btn btn-default btn-sm" ui-sref="p.invitation.list">Cancel</button>
 		<button class="btn btn-default btn-sm" ng-if="project.userCan.createProjectUpdates" ng-click="$event.stopPropagation()" x-mode="'edit'"
