--- a/modules/project-irs/client/views/ir-edit.html
+++ b/modules/project-irs/client/views/ir-edit.html
@@ -1,7 +1,7 @@
 <form class="view-form" name="inspection">
 	
 	<div class="view-title-container flex-row">
-		<h1><span ng-show="project.name">Edit Inspection &nbsp;&rsaquo;&nbsp; {{ir.name}} <span class="placeholder-value" ng-if="!ir.name">Untitled</span></h1>
+		<h1><span ng-show="project.name">Add/Edit Inspection &nbsp;&rsaquo;&nbsp; {{ir.name}} <span class="placeholder-value" ng-if="!ir.name">Untitled</span></h1>
 		<div class="actions">
 			<a class="btn btn-default btn-sm"
 				ui-sref="p.ir.list"
