--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -1,7 +1,7 @@
 <form class="view-form" name="mainForm" novalidate>
 
 	<div class="view-title-container flex-row">
-		<h1>Project Invitation &nbsp;&rsaquo;&nbsp; {{s.communication.name}} <span class="placeholder-value" ng-if="!s.communication.name">Untitled</span>
+		<h1>Add/Edit Invitation &nbsp;&rsaquo;&nbsp; {{s.communication.name}} <span class="placeholder-value" ng-if="!s.communication.name">Untitled</span>
 		</h1>
 		<div class="actions">
 			<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
