--- a/modules/invitations/client/views/invitation-list.html
+++ b/modules/invitations/client/views/invitation-list.html
@@ -1,5 +1,5 @@
 <div class="view-title-container">
-    <h1>Project Invitations</h1>
+    <h1>Invitations</h1>
 </div>
 
 <div class="view-body-container">
