Standardizing naming convention for the 'Count by Valued Component' functionality

--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -2,7 +2,7 @@
 <div class="img-view-modal modal fade" id="commentModal" role="modal">
 	<div class="modal-header">
 		<button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		<h3 class="modal-title">Public Comment Count by Topic</h3>
+		<h3 class="modal-title">Public Comment Count by Valued Component</h3>
 	</div>
 	<tmpl-public-comment-chart class="topic-cloud-container"
 		x-refresh="s.refreshVisualization"
